Issue #235: java modules (JPMS) compatibility